--- a/frontend/nginx/nginx_master_1.conf
+++ b/frontend/nginx/nginx_master_1.conf
@@ -1,8 +1,18 @@
-#user  nobody;
-#worker_processes 1;
+load_module /usr/lib/nginx/modules/ndk_http_module.so;
+load_module /usr/lib/nginx/modules/ngx_http_lua_module.so;
 
 # Enables the use of JIT for regular expressions to speed-up their processing.
 pcre_jit on;
+
+events {
+  worker_connections 1024;
+}
+
+daemon off;
+
+#user  nobody;
+#worker_processes 1;
+
 
 
 
@@ -11,11 +21,6 @@ pcre_jit on;
 #error_log  logs/error.log  info;
 
 #pid        logs/nginx.pid;
-
-
-events {
-    worker_connections  1024;
-}
 
 
 http {
@@ -75,11 +80,11 @@ http {
 
     # See Move default writable paths to a dedicated directory (#119)
     # https://github.com/openresty/docker-openresty/issues/119
-    client_body_temp_path /var/run/openresty/nginx-client-body;
-    proxy_temp_path       /var/run/openresty/nginx-proxy;
-    fastcgi_temp_path     /var/run/openresty/nginx-fastcgi;
-    uwsgi_temp_path       /var/run/openresty/nginx-uwsgi;
-    scgi_temp_path        /var/run/openresty/nginx-scgi;
+    #client_body_temp_path /var/run/openresty/nginx-client-body;
+    #proxy_temp_path       /var/run/openresty/nginx-proxy;
+    #fastcgi_temp_path     /var/run/openresty/nginx-fastcgi;
+    #uwsgi_temp_path       /var/run/openresty/nginx-uwsgi;
+    #scgi_temp_path        /var/run/openresty/nginx-scgi;
 
     sendfile        on;
     #tcp_nopush     on;
