--- a/backend/nginx/nginx_master_1.conf
+++ b/backend/nginx/nginx_master_1.conf
@@ -1,8 +1,18 @@
-#user  nobody;
-#worker_processes 1;
+load_module /usr/lib/nginx/modules/ndk_http_module.so;
+load_module /usr/lib/nginx/modules/ngx_http_lua_module.so;
 
 # Enables the use of JIT for regular expressions to speed-up their processing.
 pcre_jit on;
+
+events {
+  worker_connections 1024;
+}
+
+daemon off;
+
+#user  nobody;
+#worker_processes 1;
+
 
 
 
@@ -13,11 +23,6 @@ pcre_jit on;
 #pid        logs/nginx.pid;
 
 
-events {
-    worker_connections  1024;
-}
-
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
@@ -26,13 +31,14 @@ http {
     # When the use of underscores is disabled, request header fields whose names contain underscores are marked as invalid and become subject to the ignore_invalid_headers directive.
     # underscores_in_headers off;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
+    access_log /dev/stdout main;
 
-
+    
     # Log in JSON Format
     log_format nginxlog_json escape=json '{ "timestamp": "$time_iso8601", '
         '"remote_addr": "$remote_addr", '
@@ -54,7 +60,7 @@ http {
 
     server{
 
-        listen       80;
+        listen       8080;
         server_name  localhost;
 
         lua_need_request_body on;
@@ -72,14 +78,15 @@ http {
         access_log /dev/stdout nginxlog_json;
 
     }
+    
 
     # See Move default writable paths to a dedicated directory (#119)
     # https://github.com/openresty/docker-openresty/issues/119
-    client_body_temp_path /var/run/openresty/nginx-client-body;
-    proxy_temp_path       /var/run/openresty/nginx-proxy;
-    fastcgi_temp_path     /var/run/openresty/nginx-fastcgi;
-    uwsgi_temp_path       /var/run/openresty/nginx-uwsgi;
-    scgi_temp_path        /var/run/openresty/nginx-scgi;
+    #client_body_temp_path /var/run/openresty/nginx-client-body;
+    #proxy_temp_path       /var/run/openresty/nginx-proxy;
+    #fastcgi_temp_path     /var/run/openresty/nginx-fastcgi;
+    #uwsgi_temp_path       /var/run/openresty/nginx-uwsgi;
+    #scgi_temp_path        /var/run/openresty/nginx-scgi;
 
     sendfile        on;
     #tcp_nopush     on;
